tests/fixtures/errors/bind_marker_missing.h
/**
 * @nb_name Foo
 */
class Foo {};
